--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "send.me-backend-2022-2",
+  "name": "serve",
   "version": "1.0.0",
-  "description": "Back-end",
+  "description": "",
   "main": "SendMeApp.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/SendMeApp.ts",
-    "build": "tsc",
-    "start": "node dist/src/SendMeApp.js"
+    "start": "nodemon SendMeApp.ts",
+    "dev": "nodemon SendMeApp.ts",
+    "test": "echo \"Err: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/The-Seven-DSM/Send.me-BackEnd-2022-2.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/The-Seven-DSM/Send.me-BackEnd-2022-2/issues"
-  },
-  "homepage": "https://github.com/The-Seven-DSM/Send.me-BackEnd-2022-2#readme",
   "dependencies": {
-    "@types/express": "^4.17.13",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.21.6",
-    "ts-node-dev": "^2.0.0",
-    "uuid": "^9.0.0"
+    "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.22.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4"
+    "@types/express": "^4.17.14"
   }
 }
