--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "@types/nodemailer": "^6.4.6"
   }
 }
